# sample-python

./: .cz.toml  .pre-commit-config.yaml  README.md  pyproject.toml
applications/app_example/: README.md  pyproject.toml
applications/app_example/app_example/: __init__.py
applications/app_example/tests/: test_app_example.py
librairies/forecasting_ai/: README.md  pyproject.toml
librairies/forecasting_ai/forecasting_ai/: __init__.py
librairies/forecasting_ai/tests/: test_forecasting_ai.py
librairies/forecasting_labview_io/: README.md  pyproject.toml
librairies/forecasting_labview_io/forecasting_labview_io/: __init__.py
librairies/forecasting_labview_io/tests/: test_forecasting_labview_io.py
librairies/forecasting_micromed_io/: README.md  pyproject.toml
librairies/forecasting_micromed_io/forecasting_micromed_io/: __init__.py
librairies/forecasting_micromed_io/tests/: test_forecasting_micromed_io.py
