[tool.poetry]
name = "forecasting"
version = "0.1.0"
description = "Forecasting Epilespsy Project"
authors = ["Etienne de MONTALIVET <etienne.massonbachassondemontalivet@cea.fr>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.13.0"
black = "^21.6b0"
isort = "^5.9.1"
mypy = "^0.910"
pylint = "^2.9.0"
commitizen = "^2.17.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
