[tool.poetry]
name = "forecasting-micromed-io"
version = "0.1.0"
description = ""
authors = ["Etienne de MONTALIVET <etienne.massonbachassondemontalivet@cea.fr>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
